test_regress/t/t_param_default_bad.out
%Error: t/t_param_default_bad.v:7:26: Parameter without default value is never given value (IEEE 1800-2023 6.20.1): 'Foo'
                                    : ... note: In instance 't.foo'
    7 | module m #(parameter int Foo);
      |                          ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
